objects/Motive_IO_Association__c.object
<CustomObject>
    <fields>
        <fullName>IdContactMotive__c</fullName>
        <description>Related Contact Motive</description>
        <label>Motivo de Contacto</label>
        <referenceTo>Contact_Motive__c</referenceTo>
        <relationshipLabel>Asociaciones Motivo/IO</relationshipLabel>
        <relationshipName>Motive_IO_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IdIO__c</fullName>
        <label>Dispositivo IO</label>
        <referenceTo>IO__c</referenceTo>
        <relationshipName>Asociaciones_S_ntoma_IO</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <label>Asociación Motivo/IO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdContactMotive__c</columns>
        <columns>IdIO__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASOC-{0000}</displayFormat>
        <label>Motive IO Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asociaciones Motivo/IO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>